feat: generated runnable demo version
